--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
         <script src="js/scripts.js"></script>
     </head>
     <body>
-        <main>
-
+        <nav>
+        </nav>         
+          <header>
+            <img src="images/gl-laying-down.jpg" alt="Glenn Langdon with baton">
+          </header>                     
+        <main>   
         </main>
         <footer>
-        </footer>
+        </footer>     
+        
     </body>
 </html>
