--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
         <script src="js/scripts.js"></script>
     </head>
     <body>
-        <nav>
-        </nav>         
-        <header>     
+        <nav>           
+        </nav>           
+        <header>
+            <div id="splash-img"></div>   
         </header>                     
         <main>   
         </main>
