grid hero image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <nav>           
         </nav>           
         <header>
-            <div id="splash-img"></div>   
+            <div id="hero-banner">
+                <img id="hero-img" src="images/gl-laying-down.jpg" alt="">
+            </div>   
         </header>                     
         <main>   
         </main>
