--- a/index.html
+++ b/index.html
@@ -9,14 +9,31 @@
         <script src="js/scripts.js"></script>
     </head>
     <body>
-        <nav>           
-        </nav>           
-        <header>
-            <div id="hero-banner">
-                <img id="hero-img" src="images/gl-laying-down.jpg" alt="">
+                 
+        <header class="nav-wrapper">         
+            <div class="menu-wrapper">
+                <h2 class="logo">Glenn Langdon</h2>
+                <nav>
+                    <ul class="right-nav">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Music</a></li>
+                        <li><a href="#">Digital Design</a></li>
+                        <li><a href="#">Farming</a></li>
+                        <li><a href="#">Contact</a></li>                     
+                    </ul>    
+                </nav>                       
             </div>   
-        </header>                     
-        <main>   
+        </header>
+        <div class="banner-wrapper"></div>                     
+        <main>
+            <div class="bio">
+                <h2>About Glenn</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In nulla posuere sollicitudin aliquam. Mattis aliquam faucibus purus in massa tempor. Sit amet est placerat in egestas. Nibh sit amet commodo nulla facilisi nullam. Ut enim blandit volutpat maecenas. Aenean sed adipiscing diam donec adipiscing. Nunc faucibus a pellentesque sit amet porttitor eget dolor. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Vel quam elementum pulvinar etiam non quam lacus. Justo laoreet sit amet cursus sit amet dictum sit. Senectus et netus et malesuada.</p>
+
+                <p>Nunc pulvinar sapien et ligula ullamcorper. Feugiat nisl pretium fusce id velit ut. Commodo odio aenean sed adipiscing diam donec adipiscing tristique risus. Curabitur gravida arcu ac tortor dignissim convallis. Metus vulputate eu scelerisque felis. Lectus mauris ultrices eros in cursus turpis massa tincidunt dui. Rhoncus mattis rhoncus urna neque. Quam quisque id diam vel quam. Egestas sed sed risus pretium quam vulputate dignissim suspendisse in. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elit ut aliquam purus sit amet luctus venenatis lectus. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Nulla aliquet enim tortor at auctor urna nunc id cursus. Aliquet eget sit amet tellus cras. Ultricies integer quis auctor elit sed vulputate mi. Egestas sed tempus urna et pharetra pharetra massa. Vulputate enim nulla aliquet porttitor lacus luctus. Orci eu lobortis elementum nibh tellus molestie nunc non. In dictum non consectetur a erat nam at lectus urna.</p>
+
+                <p>Ultricies leo integer malesuada nunc vel. Massa sed elementum tempus egestas sed sed risus. Adipiscing bibendum est ultricies integer. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae. Justo nec ultrices dui sapien eget mi. Ante metus dictum at tempor commodo ullamcorper a. Lacus viverra vitae congue eu consequat ac felis donec. Nulla aliquet enim tortor at auctor. Lectus mauris ultrices eros in cursus turpis massa tincidunt. Sit amet venenatis urna cursus eget nunc scelerisque viverra. Fringilla urna porttitor rhoncus dolor purus non. Cras tincidunt lobortis feugiat vivamus at augue. Dignissim diam quis enim lobortis. Suspendisse in est ante in nibh mauris cursus. Orci sagittis eu volutpat odio facilisis mauris sit.</p>
+            </div>   
         </main>
         <footer>
         </footer>     
