--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         
         <title>Glenn Langdon home page</title>
         <link href="styles/styles0.css" rel="stylesheet">
+        <!--Google fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Tulpen+One&display=swap" rel="stylesheet">
         <script src="js/scripts.js"></script>
     </head>
     <body>
@@ -14,7 +18,7 @@
             <div class="menu-wrapper">
                 <h2 class="logo">Glenn Langdon</h2>
                 <nav>
-                    <ul class="right-nav">
+                    <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Music</a></li>
                         <li><a href="#">Digital Design</a></li>
@@ -26,6 +30,14 @@
         </header>
         <div class="banner-wrapper"></div>                     
         <main>
+            <article class="home-statement">
+                <p>My hero's jounrey includes conducting Bartók with the Cleveland Orchestra, being
+                    a course assistant at Harvard University's Computer Science Department, giving my
+                    New York City debut piano recital 5 years after an injury left my right hand bereft
+                    of sensation and managing a cotton farm in the bootheel of Missouri.
+                </p>
+            </article>
+            
             <div class="bio">
                 <h2>About Glenn</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In nulla posuere sollicitudin aliquam. Mattis aliquam faucibus purus in massa tempor. Sit amet est placerat in egestas. Nibh sit amet commodo nulla facilisi nullam. Ut enim blandit volutpat maecenas. Aenean sed adipiscing diam donec adipiscing. Nunc faucibus a pellentesque sit amet porttitor eget dolor. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Vel quam elementum pulvinar etiam non quam lacus. Justo laoreet sit amet cursus sit amet dictum sit. Senectus et netus et malesuada.</p>
