--- a/index.html
+++ b/index.html
@@ -31,21 +31,41 @@
         <div class="banner-wrapper"></div>                     
         <main>
             <article class="home-statement">
-                <p>My hero's jounrey includes conducting Bartók with the Cleveland Orchestra, being
+                <p>My hero's journey includes conducting Bartók with the Cleveland Orchestra, being
                     a course assistant at Harvard University's Computer Science Department, giving my
                     New York City debut piano recital 5 years after an injury left my right hand bereft
                     of sensation and managing a cotton farm in the bootheel of Missouri.
                 </p>
             </article>
+            <h2 id="info-headline">About Glenn</h2>
             
-            <div class="bio">
-                <h2>About Glenn</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In nulla posuere sollicitudin aliquam. Mattis aliquam faucibus purus in massa tempor. Sit amet est placerat in egestas. Nibh sit amet commodo nulla facilisi nullam. Ut enim blandit volutpat maecenas. Aenean sed adipiscing diam donec adipiscing. Nunc faucibus a pellentesque sit amet porttitor eget dolor. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Vel quam elementum pulvinar etiam non quam lacus. Justo laoreet sit amet cursus sit amet dictum sit. Senectus et netus et malesuada.</p>
-
-                <p>Nunc pulvinar sapien et ligula ullamcorper. Feugiat nisl pretium fusce id velit ut. Commodo odio aenean sed adipiscing diam donec adipiscing tristique risus. Curabitur gravida arcu ac tortor dignissim convallis. Metus vulputate eu scelerisque felis. Lectus mauris ultrices eros in cursus turpis massa tincidunt dui. Rhoncus mattis rhoncus urna neque. Quam quisque id diam vel quam. Egestas sed sed risus pretium quam vulputate dignissim suspendisse in. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elit ut aliquam purus sit amet luctus venenatis lectus. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Nulla aliquet enim tortor at auctor urna nunc id cursus. Aliquet eget sit amet tellus cras. Ultricies integer quis auctor elit sed vulputate mi. Egestas sed tempus urna et pharetra pharetra massa. Vulputate enim nulla aliquet porttitor lacus luctus. Orci eu lobortis elementum nibh tellus molestie nunc non. In dictum non consectetur a erat nam at lectus urna.</p>
-
-                <p>Ultricies leo integer malesuada nunc vel. Massa sed elementum tempus egestas sed sed risus. Adipiscing bibendum est ultricies integer. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae. Justo nec ultrices dui sapien eget mi. Ante metus dictum at tempor commodo ullamcorper a. Lacus viverra vitae congue eu consequat ac felis donec. Nulla aliquet enim tortor at auctor. Lectus mauris ultrices eros in cursus turpis massa tincidunt. Sit amet venenatis urna cursus eget nunc scelerisque viverra. Fringilla urna porttitor rhoncus dolor purus non. Cras tincidunt lobortis feugiat vivamus at augue. Dignissim diam quis enim lobortis. Suspendisse in est ante in nibh mauris cursus. Orci sagittis eu volutpat odio facilisis mauris sit.</p>
-            </div>   
+            <div id="info-flex-container">
+                <div class="info">
+                    <img id="stairs-img" src="/images/music/gl_stairs_540x546.jpg" alt="Glenn on stairs with baton">
+                </div>
+                <div class="info">
+                    <p>
+                    Praised for his polished, expressive, and nuanced performances, Glenn Langdon's unusually varied repertoire highlights an eclectic musical aesthetic and singularly
+                    American heritage.  From directing performances of the Rite of Spring and Carmin Burana, to the jazz of Kermit Ruffins and the cajun fiddle tunes of Amanda Shaw, Langdon is fully "at home."
+                    </p>            
+                </div>
+                <div class="info">
+                    <p>
+                        Hailing from generations of cotton farmers, Langdon cares deeply about sustainability in agriculture for the future of America's farmland.
+                    </p>
+                </div>             
+                <div class="info">
+                    <img id="combine-img" src="/images/farm/gl_combine_300x450.jpg" alt="Glenn in front of cotton combine">
+                </div>
+                <div class="info">
+                    <img id="studio-img1" src="/images/music/gl_lookingAway_400x390.jpg" alt="Glenn Langdon">
+                </div>
+                <div class="info">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac finibus orci, non posuere leo. Sed malesuada dolor id nisi iaculis congue. Aliquam eu auctor erat, nec rhoncus velit. Donec a porttitor augue, quis lacinia augue. Nunc at ultricies lacus. Quisque dignissim justo a massa ultricies, sed commodo orci consectetur
+                    </p>
+                </div>                         
+            </div>
         </main>
         <footer>
         </footer>     
