index page roughed out

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!--Google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Tulpen+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Tulpen+One&display=swap" rel="stylesheet">
         <script src="js/scripts.js"></script>
     </head>
     <body>
@@ -66,6 +66,10 @@
                     </p>
                 </div>                         
             </div>
+        
+            <div class="word-cloud">
+                <img src="images/word_cloud_1000x563.png" alt="word cloud">
+            </div>                         
         </main>
         <footer>
         </footer>     
