--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                        
             <div id="info-grid-container">
                 <h2 id="music-heading">Music</h2>
-                <div id="stair-img">
-                    <img id="stairs-img" src="/images/music/gl_stairs_540x546.jpg" alt="Glenn on stairs with baton">
-                </div>
-                <div id="music-tease">
+                <div id="article1">
+                    <img class="article-img" src="/images/music/gl_stairs_540x546.jpg" alt="Glenn on stairs with baton">
+                </div>          
+                <div id="article1-stmt">
                     <p>
                     Praised for his polished, expressive, and nuanced performances, Glenn Langdon's unusually varied repertoire highlights an eclectic musical aesthetic and singularly
                     American heritage.  From directing performances of the Rite of Spring and Carmin Burana, to the jazz of Kermit Ruffins and the cajun fiddle tunes of Amanda Shaw, Langdon is fully "at home."
@@ -52,7 +52,7 @@
 
                 <h2 id="design-heading">Digital Design</h2>
                 <div id="prog-img">
-                    <img id="studio-img1" src="/images/music/gl_lookingAway_400x390.jpg" alt="Glenn Langdon">
+                    <img class="article-img" src="/images/music/gl_lookingAway_400x390.jpg" alt="Glenn Langdon">
                 </div>
                 <div id="prog-tease">
                     <p>
@@ -67,7 +67,7 @@
                     </p>
                 </div>             
                 <div id="farm-img">
-                    <img id="combine-img" src="/images/farm/gl_combine_300x450.jpg" alt="Glenn in front of cotton combine">
+                    <img class="article-img" src="/images/farm/gl_combine_300x450.jpg" alt="Glenn in front of cotton combine">
                 </div>                             
             </div>
         
