--- a/index.html
+++ b/index.html
@@ -40,30 +40,33 @@
                        
             <div id="info-grid-container">
                 <h2 id="music-heading">Music</h2>
-                <div id="article1">
+                <div class="article1-divs" id="article1">
                     <img class="article-img" src="/images/music/gl_stairs_540x546.jpg" alt="Glenn on stairs with baton">
                 </div>          
-                <div id="article1-stmt">
+                <div class="article-stmts" id="article1-stmt">
                     <p>
                     Praised for his polished, expressive, and nuanced performances, Glenn Langdon's unusually varied repertoire highlights an eclectic musical aesthetic and singularly
                     American heritage.  From directing performances of the Rite of Spring and Carmin Burana, to the jazz of Kermit Ruffins and the cajun fiddle tunes of Amanda Shaw, Langdon is fully "at home."
-                    </p>            
+                    <a class="more-info" id="article1-link" href="music_general.html">Read more...</a>  
+                </p>                
                 </div>
 
                 <h2 id="design-heading">Digital Design</h2>
                 <div id="prog-img">
                     <img class="article-img" src="/images/music/gl_lookingAway_400x390.jpg" alt="Glenn Langdon">
                 </div>
-                <div id="prog-tease">
+                <div class="article-stmts" id="prog-tease">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac finibus orci, non posuere leo. Sed malesuada dolor id nisi iaculis congue. Aliquam eu auctor erat, nec rhoncus velit. Donec a porttitor augue, quis lacinia augue. Nunc at ultricies lacus. Quisque dignissim justo a massa ultricies, sed commodo orci consectetur
+                        <a class="more-info" id="article2-link" href="#">Read more...</a>  
                     </p>
                 </div>         
                 
                 <h2 id="farm-heading">Farming</h2>
-                <div id="farm-tease">
+                <div class="article-stmts" id="farm-tease">
                     <p>
                         Hailing from generations of cotton farmers, Langdon cares deeply about sustainability in agriculture for the future of America's farmland.
+                        <a class="more-info" id="article3-link" href="#">Read more...</a> 
                     </p>
                 </div>             
                 <div id="farm-img">
