--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Tulpen+One&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/56c133eebb.js" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
     </head>
     <body>
@@ -47,7 +48,7 @@
                     <p>
                     Praised for his polished, expressive, and nuanced performances, Glenn Langdon's unusually varied repertoire highlights an eclectic musical aesthetic and singularly
                     American heritage.  From directing performances of the Rite of Spring and Carmin Burana, to the jazz of Kermit Ruffins and the cajun fiddle tunes of Amanda Shaw, Langdon is fully "at home."
-                    <a class="more-info" id="article1-link" href="music_general.html">Read more...</a>  
+                    <a class="more-info" id="article1-link" href="music_general.html"><i class="fas fa-arrow-circle-right"></i>  Read more...</a>  
                 </p>                
                 </div>
 
@@ -58,7 +59,8 @@
                 <div class="article-stmts" id="prog-tease">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac finibus orci, non posuere leo. Sed malesuada dolor id nisi iaculis congue. Aliquam eu auctor erat, nec rhoncus velit. Donec a porttitor augue, quis lacinia augue. Nunc at ultricies lacus. Quisque dignissim justo a massa ultricies, sed commodo orci consectetur
-                        <a class="more-info" id="article2-link" href="#">Read more...</a>  
+                        <a class="more-info" id="article2-link" href="#"><i class="fas fa-arrow-circle-right"></i>  Read more...</a> 
+                        
                     </p>
                 </div>         
                 
@@ -66,7 +68,7 @@
                 <div class="article-stmts" id="farm-tease">
                     <p>
                         Hailing from generations of cotton farmers, Langdon cares deeply about sustainability in agriculture for the future of America's farmland.
-                        <a class="more-info" id="article3-link" href="#">Read more...</a> 
+                        <a class="more-info" id="article3-link" href="#"><i class="fas fa-arrow-circle-right"></i> Read more...</a> 
                     </p>
                 </div>             
                 <div id="farm-img">
