--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="music_general.html">Music</a></li>
-                        <li><a href="#">Digital Design</a></li>
+                        <li><a href="dgmd.html">Digital Design</a></li>
                         <li><a href="#">Farming</a></li>
                         <li><a href="#">Contact</a></li>                     
                     </ul>    
