--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="article-stmts" id="prog-tease">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac finibus orci, non posuere leo. Sed malesuada dolor id nisi iaculis congue. Aliquam eu auctor erat, nec rhoncus velit. Donec a porttitor augue, quis lacinia augue. Nunc at ultricies lacus. Quisque dignissim justo a massa ultricies, sed commodo orci consectetur
+                            I’ve always been fascinated by technology.  After leaving the tour of Phantom of the Opera and thus having more time, I began to take programming courses with the aim of exploring the intersection of art and technology.  My programming journey has included courses at Tulane, Stanford (the Distinguished Careers Institute) and now a Masters of Digital Design at Harvard University.
                             <a class="more-info" id="article2-link" href="#"><i class="fas fa-arrow-circle-right"></i>  Read more...</a> 
                             
                         </p>
