--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
                 </nav>                       
             </div>   
         </header>
-        <div class="banner-wrapper"><!--background img goes here--></div>                     
+        <div class="banner-wrapper">
+            <!--background img goes here-->
+        </div>                     
             <main>
-                <article class="home-statement">
+                <div class="home-statement">
                     <p>My hero's journey includes conducting Bartók with the Cleveland Orchestra, being
                         a course assistant at Harvard University's Computer Science Department, giving my
                         New York City debut piano recital 5 years after an injury left my right hand bereft
                         of sensation and managing a cotton farm in the bootheel of Missouri.
                     </p>
-                </article>
+                </div>
                         
                 <div id="info-grid-container">
                     <h2 id="music-heading">Music</h2>
