--- a/music_general.html
+++ b/music_general.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,9 +11,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Tulpen+One&display=swap" rel="stylesheet">
         <!--Link and scripts for jQuery-->
-        <script type="text/javascript" src="https://cdn.jwplayer.com/libraries/uWGJtys0.js"></script>
+        <script src="https://cdn.jwplayer.com/libraries/uWGJtys0.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="js/music_page.js" type="text/javascript"></script>
+        <script src="js/music_page.js"></script>
         <!--Script for all other pages-->
         <script src="js/scripts.js"></script>
     </head>
@@ -51,8 +51,8 @@
                 <div id="music-statement">
                     An eclectic musical aesthetic and singularly American heritage.
                 </div>
-                <video id="nutcracker-video" controls>
-                    <source src="https://gl-music-site.s3.amazonaws.com/videos/LPO_Nut_roughcut.mp4" type="video/mp4" poster="/images/music/Nut_thumbnail.jpg">
+                <video id="nutcracker-video" controls poster="/images/music/Nut_thumbnail.jpg">
+                    <source src="https://gl-music-site.s3.amazonaws.com/videos/LPO_Nut_roughcut.mp4" type="video/mp4">
                 </video>
 
                 
