--- a/dgmd.html
+++ b/dgmd.html
@@ -10,9 +10,10 @@
         <!--Google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Tulpen+One&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&family=Raleway:wght@300&family=Source+Sans+Pro&family=Tulpen+One&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/56c133eebb.js" crossorigin="anonymous"></script>      
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:Light|Raleway" rel="stylesheet">
         <!--Bootstrap links-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -76,17 +77,19 @@
                         </div>
                     </div>
               
-                    <div class="row>"
+                    <div class="row">
                       <div id="code-output">
                           <ul id="code-list">
                               <li>Hi, I'm Glenn Langdon and I'm passionate about creativity.</li>
                               <li>I <a href="music_general.html" data-toggle="tooltip" data-placement="right"
-                                title="Visit Glenn's music site?">conduct orchestras.</a></li>
+                                title="Visit Glenn's music site?">conduct orchestras.</a>
+                              </li>
                               <li>I <a href="music_general.html" data-toggle="tooltip" data-placement="right"
-                                title="Visit Glenn's music site?">play the piano.</a></li>
-                              <!-- <li>I write.</li> -->
+                                title="Visit Glenn's music site?">play the piano.</a>
+                              </li>
                               <li>I<a href="https://github.com/nolaProgramierer?tab=repositories" data-toggle="tooltip"
-                                    data-placement="right" title="Visit Glenn's github repo"> code.
+                                    data-placement="right" title="Visit Glenn's github repo"> code.</a>
+                              </li>
                               <li>[Finished in 0.062s]</li>
                           </ul>              
                       </div>
@@ -94,6 +97,6 @@
                   </div>
               </div>
             </div>
-        </div>                                    
+                                            
     </body>
 </html>
