upload to Harvard

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Glenn Langdon">
+        <meta name="description" content="Website for Glenn Langdon">
+        <meta name="keywords" content="Glenn Langdon, Phantom of the Opera, Houston Ballet, Digital Design,
+        Farming, Conductor, Pianist, Harvard University, CSCI E-33a">
         
         <title>Glenn Langdon home page</title>
         <link href="styles/styles0.css" rel="stylesheet">
@@ -44,7 +48,7 @@
                 <div id="info-grid-container">
                     <h2 id="music-heading">Music</h2>
                     <div class="article1-divs" id="article1">
-                        <img class="article-img" src="/images/music/gl_stairs_540x546.jpg" alt="Glenn on stairs with baton">
+                        <img class="article-img" src="images/music/gl_stairs_540x546.jpg" alt="Glenn on stairs with baton">
                     </div>          
                     <div class="article-stmts" id="article1-stmt">
                         <p>
@@ -56,7 +60,7 @@
 
                     <h2 id="design-heading">Digital Design</h2>
                     <div id="prog-img">
-                        <img class="article-img" src="/images/music/gl_lookingAway_400x390.jpg" alt="Glenn Langdon">
+                        <img class="article-img" src="images/music/gl_lookingAway_400x390.jpg" alt="Glenn Langdon">
                     </div>
                     <div class="article-stmts" id="prog-tease">
                         <p>
@@ -74,7 +78,7 @@
                         </p>
                     </div>             
                     <div id="farm-img">
-                        <img class="article-img" src="/images/farm/gl_combine_300x450.jpg" alt="Glenn in front of cotton combine">
+                        <img class="article-img" src="images/farm/gl_combine_300x450.jpg" alt="Glenn in front of cotton combine">
                     </div>                             
                 </div>
             
