--- a/music_general.html
+++ b/music_general.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Glenn Langdon">
+        <meta name="description" content="Website for Glenn Langdon">
+        <meta name="keywords" content="Glenn Langdon, Phantom of the Opera, Houston Ballet, Digital Design,
+        Farming, Conductor, Pianist, Harvard University, CSCI E-33a">
         
         <title>Music</title>
         <link href="styles/styles0.css" rel="stylesheet">
@@ -35,7 +39,7 @@
         <div id="music-page-container">
            
                 <div id="wpb-img-div">
-                    <img class="article-img" src="/images/music/caras_wpb.jpg" alt="Glenn Langdon conducting">
+                    <img class="article-img" src="images/music/caras_wpb.jpg" alt="Glenn Langdon conducting">
                 </div>
                 <div class="p-font" id="music-bio1">
                     <p>
@@ -51,7 +55,7 @@
                 <div id="music-statement">
                     An eclectic musical aesthetic and singularly American heritage.
                 </div>
-                <video id="nutcracker-video" controls poster="/images/music/Nut_thumbnail.jpg">
+                <video id="nutcracker-video" controls poster="images/music/Nut_thumbnail.jpg">
                     <source src="https://gl-music-site.s3.amazonaws.com/videos/LPO_Nut_roughcut.mp4" type="video/mp4">
                 </video>
 
