--- a/touring.html
+++ b/touring.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Glenn Langdon">
+        <meta name="description" content="Website for Glenn Langdon">
+        <meta name="keywords" content="Glenn Langdon, Phantom of the Opera, Houston Ballet, Digital Design,
+        Farming, Conductor, Pianist, Harvard University, CSCI E-33a">
         
         <title>Phantom Tour</title>
         <link href="styles/styles0.css" rel="stylesheet">
