replace png, refactor js

--- a/music_general.html
+++ b/music_general.html
@@ -85,13 +85,13 @@
                 </div>
                 <div id="slides">
                     <!--Add overlay div here-->
-                    <img src="images/music/etude_01.png" alt=" Measure of Etude">
+                    <img src="images/music/stravinsky_slides/etude_01.jpg" alt=" Measure of Etude">
                 </div>
                 <div id="ms-counter">
                     <!--measure counter here-->
                 </div>
                 <div id="music-pages">               
-                    <img src="images/music/Etude_4_1.png" id="music-page" alt="music page">
+                    <img src="images/music/Etude_4_1.jpg" id="music-page" alt="music page">
                 </div>
                                
         </div>
