--- a/dgmd.html
+++ b/dgmd.html
@@ -30,11 +30,11 @@
                 <h2 class="logo">Glenn Langdon</h2>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="music_general.html">Music</a></li>
-                        <li><a href="dgmd.html">Digital Design</a></li>
-                        <li><a href="#">Farming</a></li>
-                        <li><a href="#">Contact</a></li>                     
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="music_general.html">Music</a></li>
+                      <li><a href="dgmd.html">Digital Design</a></li>
+                      <li><a href="farm.html">Farming</a></li>
+                      <li><a href="contact.html">Contact</a></li>          
                     </ul>    
                 </nav>                       
             </div>   
