--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="music_general.html">Music</a></li>
                         <li><a href="dgmd.html">Digital Design</a></li>
-                        <li><a href="#">Farming</a></li>
-                        <li><a href="#">Contact</a></li>                     
+                        <li><a href="farm.html">Farming</a></li>
+                        <li><a href="contact.html">Contact</a></li>                 
                     </ul>    
                 </nav>                       
             </div>   
