links index page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="article-stmts digital-design" id="prog-tease">
                         <p>
                             I’ve always been fascinated by technology.  After leaving the tour of Phantom of the Opera and thus having more time, I began to take programming courses with the aim of exploring the intersection of art and technology.  My programming journey has included courses at Stanford University (<a href="https://dci.stanford.edu/fellow/glenn-langdon/">the Distinguished Careers Institute</a>) and now a Masters of Digital Design at Harvard University.
-                            <a class="more-info" id="article2-link" href="#"><i class="fas fa-arrow-circle-right"></i>  Read more...</a> 
+                            <a class="more-info" id="article2-link" href="dgmd.html"><i class="fas fa-arrow-circle-right"></i>  Read more...</a> 
                         </p>
                     </div>         
                     
@@ -78,7 +78,7 @@
                     <div class="article-stmts" id="farm-tease">
                         <p>
                             Hailing from generations of cotton farmers, I care deeply about sustainability in agriculture for the future of America's farmland.
-                            <a class="more-info" id="article3-link" href="#"><i class="fas fa-arrow-circle-right"></i> Read more...</a> 
+                            <a class="more-info" id="article3-link" href="farm.html"><i class="fas fa-arrow-circle-right"></i> Read more...</a> 
                         </p>
                     </div>             
                     <div id="farm-img">
