Font for opening statement

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,27 @@
             </div>   
         </header>
         <div id="farm-page-container">
-            <h1>"This page is under construction"</h1>
+            <div id="contact-hero-img"></div>
+            <div id="contact-invitation">
+                <p>Let's create something special!</p>
+            </div>
+            <div id="contact-form">
+                <form action="https://submit-form.com/sbcjIXNg">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Name" required="" />
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required="" />
+                    <label for="message">Message</label>
+                    <textarea
+                      id="message"
+                      name="message"
+                      placeholder="Message"
+                      required=""
+                    ></textarea>
+                    <button type="submit">Send</button>
+                  </form>
+                  
+            </div>
         </div>
         <footer>
         </footer>     
