--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--Google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Tulpen+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Alegreya&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/56c133eebb.js" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
     </head>
@@ -39,9 +39,8 @@
             <main>
                 <div class="home-statement">
                     <p>My hero's journey includes conducting Bartók with the Cleveland Orchestra, being
-                        a course assistant at Harvard University's Computer Science Department, giving my
-                        New York City debut piano recital 5 years after an injury left my right hand bereft
-                        of sensation and managing a cotton farm in the bootheel of Missouri.
+                    a teaching fellow in Harvard University's Computer Science Department, conducting nearly 5000 performances of the hit Broadway musical, the <em>Phantom of the Opera</em>, giving my
+                    New York City debut piano recital 5 years after an injury left my right hand bereft of sensation, and managing a cotton farm in the bootheel of Missouri.
                     </p>
                 </div>
                         
